[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/interface/UserInterface.gd" type="Script" id=1]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -380.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = 150.0
text = "Score: 0000"
valign = 1

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.321569 )

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -135.0
margin_right = 135.0
margin_bottom = 135.0

[node name="Title" type="Label" parent="PauseOverlay/PauseMenu"]
margin_right = 270.0
margin_bottom = 14.0
text = "PAUSED"
align = 1
valign = 1

[node name="RetryButton" type="Button" parent="PauseOverlay/PauseMenu"]
margin_top = 18.0
margin_right = 270.0
margin_bottom = 38.0
text = "Retry"

[node name="QuitButton" type="Button" parent="PauseOverlay/PauseMenu"]
margin_top = 42.0
margin_right = 270.0
margin_bottom = 62.0
text = "Quit"
[connection signal="button_up" from="PauseOverlay/PauseMenu/RetryButton" to="." method="_on_RetryButton_button_up"]
[connection signal="button_up" from="PauseOverlay/PauseMenu/QuitButton" to="." method="_on_QuitButton_button_up"]
